add swagger comments
