# app/controllers/banner_controller.go
@@ -20,6 +20,14 @@ func NewBannerController(bannerService services.BannerService) *BannerController
 }
 
 // GetBannerByID handles the request to get a banner by ID
+//
+//	@Summary		Get banner by ID
+//	@Description	Get a banner by its ID
+//	@Tags			Banners
+//	@Produce		json
+//	@Param			id	path		string	true	"Banner ID"
+//	@Success		200	{object}	models.Banner
+//	@Router			/banners/{id} [get]
 func (c *BannerController) GetBanner(ctx *fiber.Ctx) error {
 	bannerID := ctx.Params("id")
 	if bannerID == "" {
@@ -40,6 +48,13 @@ func (c *BannerController) GetBanner(ctx *fiber.Ctx) error {
 }
 
 // ListBanners returns all banners for the current user
+//
+//	@Summary		List banners
+//	@Description	List all banners for the current user
+//	@Tags			Banners
+//	@Produce		json
+//	@Success		200	{object}	[]models.Banner
+//	@Router			/banners [get]
 func (c *BannerController) ListBanners(ctx *fiber.Ctx) error {
 	userID := ctx.Locals("userID").(string)
 
